2014-09-11 Fixed drawing issue on Android 4.1.2 native browser in ShapeTracing module
2014-09-10 Fixed drawing issue on IE 11 mobile browser in ShapeTracing addon
2014-09-10 Fixed drawing issue on IE 11 mobile browser
2014-09-10 Fixed drawing issue on Android 4.1.2 native browser
2014-09-10 Fixed reaction on Check button in Show Answers module and reaction on Show Answers in True False module
2014-09-10 Added show, hide and isVisible commands to Paragraph module
2014-09-08 Fixed isAttempted method in Coloring module
2014-09-08 Fixed performance issue in Drawing addon
2014-09-08 Added enabling letters selection in Text Selection module
2014-09-05 Fixed deselecting text after completion of audio
2014-09-04 Fixed calculating page and lesson scores in PlayerUtils
2014-09-04 Writing Calculation: fixed error in console.log
2014-09-04 IWB Toolbar: now you can change tooltip text in css styles
2014-09-04 Fixed problem with model validation in Connection module
2014-09-03 Fixed IWB Toolbar position from the left side of the screen
2014-09-03 Fixed lesson loading image position
2014-09-03 Removed unexpected behavior when some one types in some characters from standard keyboard and then clicked on any button in eKeyboard module
2014-09-02 Added random order properties to Connection module
2014-09-02 Added responding to Show Answers events in Coloring, Connection, Text, Image Gap, Image Identification, Ordering and Text Selection
2014-09-02 Fixed initial scoring in Puzzle module
2014-09-02 Fixed initial scoring in Coloring module
2014-09-01 Added getFooterModule() method in Player API
2014-09-01 Added sending events in Magic Boxes module
2014-09-01 IWB Toolbar: fixed problem with module not working on Internet Explorer 11
2014-09-01 IWB Toolbar: now the position of toolbar in Player is the as in Editor
2014-09-01 Added adding CSS class to page when page score is 100%
2014-09-01 Added getHeaderModule() method to icPlayer API