@@ -1,3 +1,7 @@
+.Connection {
+    overflow: hidden;
+}
+
 .connectionContainer {
     height: 100%;
     width: 100%;
@@ -5,6 +9,7 @@
     border-collapse:collapse;
     border-spacing: 0px;
     direction: ltr;
+    overflow: hidden;
 }
 
 .connectionContainer .connectionLeftColumn {
@@ -29,6 +34,8 @@
 .connectionContainer .connections {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .connectionContainer .connectionItem {
