@@ -1,3 +1,4 @@
+2014-09-11 Fixed problem with double lines on Android 4.1.2 in Connection module
 2014-09-11 Fixed drawing issue on Android 4.1.2 native browser in ShapeTracing module
 2014-09-10 Fixed drawing issue on IE 11 mobile browser in ShapeTracing addon
 2014-09-10 Fixed drawing issue on IE 11 mobile browser
